[package]
name = "safebuster"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossbeam-channel = "0.5.14"
futures-util = "0.3.31"
reqwest = {version = "0.12.12", features = ["json", "blocking"]}
threadpool = "1.8.1"
tokio = {version = "1.44.0", features = ["full"]}
tokio-stream = {version = "0.1.17",features = ["io-util"] }
